[package]
name = "cigupat"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { version = "4.0.32", features=["color", "derive"] }
reqwest = { version = "0.11.13", features=["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.24.1", features=["full"] }
